# internal/api/http/v1routes/models/dummy_message.go
@@ -1,0 +1,21 @@
+// Code generated by apigen DO NOT EDIT.
+
+package models
+
+import (
+	"encoding/json"
+	"fmt"
+	"time"
+)
+
+// Unused imports workaround.
+var _ = time.Time{}
+var _ = json.Unmarshal
+var _ = fmt.Sprint
+
+// DummyMessage - Simple message object
+type DummyMessage struct { 
+	Id string `json:"id"`
+	Name string `json:"name"`
+	Comments string `json:"comments,omitempty"`
+}
